--- a/CodSoft-main/portfolio/portfolio.html
+++ b/CodSoft-main/portfolio/portfolio.html
@@ -292,7 +292,7 @@
                     The Resume</a></span>
         </div>
         <br>
-        <marquee> Thanks For Visiting. Have A Nice Day</marquee>
+        <marquee> 2023@ mohit bajeli all rights reserved</marquee>
     </div>
 
 </body>
